--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -30,7 +30,6 @@ p{
     font-size: 20px;
     font-weight: bold;
     border: none;
-    /*margin-top: 30px;*/
 }
 
 .imageboard{
@@ -67,13 +66,12 @@ p{
 }
 
 .shadow {
-    position: absolute;
+    position: fixed;
     left:0;
     top:0;
     height: 100%;
     width: 100%;
     background-color: rgba(0,0,0, 0.3);
-    overflow: hidden;
 }
 
 
@@ -129,7 +127,7 @@ input[type="file"] {
 }
 
 .single-image {
-    border-radius: 20px;
+    /*border-radius: 20px;*/
     max-width: 80%;
     max-height: 80%;
 }
