--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -71,7 +71,7 @@ p{
     top:0;
     height: 100%;
     width: 100%;
-    background-color: rgba(0,0,0, 0.3);
+    background-color: rgba(0,0,0, 0.7);
 }
 
 
@@ -124,10 +124,29 @@ input[type="file"] {
     background-color: white;
     border-radius: 30px;
     text-align: center;
+    display: flex;
+    flex-direction: row;
 }
 
 .single-image {
     /*border-radius: 20px;*/
     max-width: 80%;
     max-height: 80%;
+}
+
+.leftImage{
+    background-color: inherit;
+}
+
+.rightImage {
+    background-color: inherit;
+    border: 1px solid black;
+}
+
+.comments {
+    background-color: white;
+    border: 1px solid black;
+    margin: 30px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
