--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -46,6 +46,19 @@ p{
     -webkit-column-gap: 1em;
 }
 
+#moreImages {
+    width: 200px;
+    bottom: 0;
+    right: 45%;
+    top: auto;
+}
+
+.footerMore {
+    width: 100%;
+    height: 20px;
+    position: absolute;
+}
+
 .elem {
     display: inline-block;
     margin:  0.25rem;
@@ -201,10 +214,6 @@ input[type="file"] {
     width: 100%;
 }
 
-
-
-
-
 .singleComment {
     /*border: 1px solid black;*/
     border-radius: inherit;
@@ -249,4 +258,88 @@ input[type="file"] {
 
 #text-comment {
     height: 30px;
+}
+
+@media screen and (max-width:768px) {
+    .heading {
+        margin-top: 70px;
+        font-size: 50px;
+    }
+
+    .upload-button {
+        width: 150px;
+        height: 40px;
+        font-size: 30px;
+    }
+
+    .title {
+        font-size: 30px;
+    }
+
+    .username {
+        font-size: 20px;
+    }
+
+    #upload-screen {
+        height: 65%;
+        width: 80%;
+        top: 12%;
+        left: 10%;
+        display: flex;
+        flex-direction: column;
+        padding-top: 70px;
+    }
+
+    .close {
+        width: 70px;
+        height: 70px;
+    }
+
+    .input-upload {
+        width: 90%;
+        margin-left: 5%;
+        height: 60px;
+        font-size: 30px;
+        margin-top: 20px;
+    }
+
+    .single-image-div {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .leftImage {
+        margin-top: 100px;
+        width: 100%;
+    }
+
+    h4 {
+        font-size: 50px;
+    }
+
+    p {
+        font-size: 30px;
+    }
+
+    .comment {
+        font-size: 40px;
+    }
+
+    .comments {
+        width: 80%;
+        margin-left: 10%;
+    }
+
+    .commentInfo {
+        font-size: 30px;
+    }
+
+    #text-comment {
+        height: 60px;
+    }
+
 }
